Corrected Binary Search Bound.

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                       As \( F(\lambda) \) is linear over the interval \([\lambda^{1},  \lambda^{2}]\), the intersection with the origin
                                       can be found in \( O(1) \) once \( \lambda^{1} \) and \( \lambda^{2} \) are known.
                                       The total running time of this algorithm
-                                      is \( O(n^{2} + n \ log(n)) \) = \( O(n^{2})\),
+                                      is \( O(n^{2} + n \ log(n))  + log(n)) \) = \( O(n^{2})\),
                                       where the dominating factor is the evaluation of all the intersection points \( \lambda_{ij} \),
 
                                       <br><br>
